[gd_scene load_steps=9 format=2]

[ext_resource path="res://Leg.gd" type="Script" id=1]
[ext_resource path="res://Segment.tscn" type="PackedScene" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.360784, 1, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0.337255, 0.392157, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.670588, 0.780392, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0.858824, 1, 1 )

[node name="Leg" type="Spatial"]
script = ExtResource( 1 )

[node name="Tip" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.01005, 3 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Tip"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="UpperSeg" parent="." instance=ExtResource( 2 )]
min_angle = -1.5
max_angle = 1.5

[node name="MeshInstance" type="MeshInstance" parent="UpperSeg"]
transform = Transform( 0.1, 0, 0, 0, -8.14603e-08, -0.1, 0, 0.5, -1.62921e-08, 0, 0, 0.5 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MidSeg" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
max_angle = 3.0

[node name="MeshInstance2" type="MeshInstance" parent="MidSeg"]
transform = Transform( 0.09, 0, 0, 0, -8.14603e-08, -0.09, 0, 0.5, -1.46629e-08, 0, 0, 0.5 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="LowerSeg" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
max_angle = 3.0

[node name="MeshInstance2" type="MeshInstance" parent="LowerSeg"]
transform = Transform( 0.08, 0, 0, 0, -8.14603e-08, -0.08, 0, 0.5, -1.30337e-08, 0, 0, 0.5 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
